--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "prop-types": "^15.6.1",
     "react": "^16.13.1",
     "react-advanced-datetimerange-picker": "^1.0.11",
+    "react-data-table-component": "^6.11.5",
     "react-datepicker": "^1.8.0",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^4.3.1"
+    "react-hook-form": "^6.8.4",
+    "react-router-dom": "^4.3.1",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
