--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@kaiouwang/react-c3js": "^0.1.20",
     "ajv": "^5.5.2",
+    "aws-amplify": "^3.3.2",
+    "aws-amplify-react": "^4.2.6",
     "axios": "^0.19.0",
     "bootstrap": "^4.0.0",
     "dotenv-webpack": "^1.5.7",
@@ -22,7 +24,8 @@
     "react-datepicker": "^1.8.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.4",
-    "react-router-dom": "^4.3.1",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
