R-4: Adds leaflet react plugins

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.0.0",
     "dotenv-webpack": "^1.5.7",
     "jquery": "^3.3.1",
+    "leaflet": "^1.7.1",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "moment-range": "4.0.1",
@@ -24,6 +25,7 @@
     "react-datepicker": "^1.8.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.4",
+    "react-leaflet": "^2.7.0",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "styled-components": "^5.2.0"
