R-4: Updates env file with Mapbox api access token

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ API_PATH=<API Url Here>
 REGION=<region here>
 USER_POOL_ID=<pool if here>
 CLIENT_ID=<client id here>
+
+# Mapbox Access Token
+MAPBOX_API_KEY=<Mapbox Access Token Here>
