--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.0",
     "cross-env": "^5.2.0",
     "css-loader": "^4.2.2",
@@ -51,7 +52,7 @@
     "enzyme-adapter-react-16": "^1.2.0",
     "enzyme-to-json": "^3.3.4",
     "eslint": "^4.19.1",
-    "eslint-loader": "^1.9.0",
+    "eslint-loader": "^2.2.1",
     "eslint-plugin-mocha": "^5.1.0",
     "eslint-plugin-react": "^7.8.2",
     "file-loader": "^0.11.2",
@@ -63,7 +64,7 @@
     "pre-commit": "^1.2.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^1.2.1",
-    "uglifyjs-webpack-plugin": "^1.2.5",
+    "terser-webpack-plugin": "^1.4.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
@@ -72,13 +73,12 @@
     "serve": "webpack-dev-server --host 0.0.0.0 --port 8000",
     "gen:favicon": "cp ./src/assets/images/favicon.ico ./public/",
     "start": "rm -rf ./public/*.js ./public/*.map ./public/*.css && cross-env NODE_ENV=development webpack --config ./webpack.config.js && webpack-dev-server --port 8000",
-    "build": "rm -rf ./dist && cross-env NODE_ENV=production webpack --config ./webpack.prod.config.js && npm run pi",
+    "build": "rm -rf ./dist && cross-env NODE_ENV=production webpack --config ./webpack.prod.config.js",
     "watch": "webpack --watch",
     "sass:watch": "node-sass -w src/styles/ -o public/dist/ --source-map true",
     "test": "jest --watch",
     "lint": "./node_modules/.bin/eslint ./src",
-    "lint:fix": "./node_modules/.bin/eslint ./src --fix; exit 0",
-    "pi": "node ./src/scripts/prepareIndex.js"
+    "lint:fix": "./node_modules/.bin/eslint ./src --fix; exit 0"
   },
   "precommit": "lint",
   "author": {
