--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment-range": "4.0.1",
     "popper.js": "^1.14.3",
     "prop-types": "^15.6.1",
+    "pubsub-js": "^1.8.0",
     "react": "^16.13.1",
     "react-advanced-datetimerange-picker": "^1.0.11",
     "react-data-table-component": "^6.11.5",
