--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "aws-amplify": "^3.3.2",
     "aws-amplify-react": "^4.2.6",
     "axios": "^0.19.0",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.5.3",
     "dotenv-webpack": "^1.5.7",
     "jquery": "^3.3.1",
     "leaflet": "^1.7.1",
@@ -22,6 +22,7 @@
     "pubsub-js": "^1.8.0",
     "react": "^16.13.1",
     "react-advanced-datetimerange-picker": "^1.0.11",
+    "react-bootstrap": "^1.4.0",
     "react-data-table-component": "^6.11.5",
     "react-datepicker": "^1.8.0",
     "react-dom": "^16.13.1",
