--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "repository": "",
   "description": "Rain Web Application",
   "dependencies": {
-    "@kaiouwang/react-c3js": "^0.1.20",
     "ajv": "^5.5.2",
     "aws-amplify": "^3.3.2",
     "aws-amplify-react": "^4.2.6",
     "axios": "^0.19.0",
     "bootstrap": "^4.5.3",
+    "c3": "^0.7.20",
+    "cogo-toast": "^4.2.3",
+    "d3": "^6.2.0",
     "dotenv-webpack": "^1.5.7",
     "jquery": "^3.3.1",
     "leaflet": "^1.7.1",
