R-17: Adds maintainers in the project

--- a/package.json
+++ b/package.json
@@ -90,5 +90,6 @@
   "precommit": "lint",
   "author": {
     "name": "Suraj Manandhar"
-  }
+  },
+  "maintainers": ["Suraj Manandhar", "Buddha Man Nepali"]
 }
