--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "",
   "description": "Rain Web Application",
   "dependencies": {
+    "@kaiouwang/react-c3js": "^0.1.20",
     "ajv": "^5.5.2",
     "aws-amplify": "^3.3.2",
     "aws-amplify-react": "^4.2.6",
@@ -91,5 +92,8 @@
   "author": {
     "name": "Suraj Manandhar"
   },
-  "maintainers": ["Suraj Manandhar", "Buddha Man Nepali"]
+  "maintainers": [
+    "Suraj Manandhar",
+    "Buddha Man Nepali"
+  ]
 }
