--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react": "^16.13.1",
     "react-advanced-datetimerange-picker": "^1.0.11",
     "react-bootstrap": "^1.4.0",
-    "react-data-table-component": "^6.11.5",
+    "react-bs-datatable": "^2.1.2",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.4",
     "react-leaflet": "^2.7.0",
